--- a/sampleApp/package.json
+++ b/sampleApp/package.json
@@ -31,6 +31,7 @@
     "pretty-error": "2.0.2",
     "query-string": "4.2.3",
     "react": "^15.3.2",
+    "react-addons-update": "^15.3.2",
     "react-dom": "15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.0.0",
