--- a/sampleApp/package.json
+++ b/sampleApp/package.json
@@ -32,7 +32,7 @@
     "query-string": "4.2.3",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
-    "react-dom": "15.3.2",
+    "react-dom": "^15.4.0",
     "react-redux": "^4.4.5",
     "redux": "^3.0.0",
     "sequelize": "3.24.5",
