--- a/sampleApp/package.json
+++ b/sampleApp/package.json
@@ -32,6 +32,7 @@
     "query-string": "4.2.3",
     "react": "^15.3.2",
     "react-addons-update": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.4.0",
     "react-redux": "^4.4.5",
     "redux": "^3.0.0",
